--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,9 @@ body {
 .cartao {
     margin: 1rem 1rem;
     background-color: aliceblue;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
 }
 
 footer {
